--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>bcwahoo's Personal Page</title>
+        <title>bcwahoo Personal Page</title>
     </head>
     <body>
         <h1>YOOOOOOOOOOOO!!!!!</h1>
