--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>bcwahoo Personal Page</title>
     </head>
     <body>
-        <h1>YOOOOOOOOOOOO!!!!!</h1>
+        <h1>YOOOOOOOOOOOO</h1>
     </body>
 </html>
