--- a/index.html
+++ b/index.html
@@ -1,9 +1,63 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>BcWahoo Personal Page</title>
-    </head>
-    <body>
-        <h1>YOOOOOOOOOOOO</h1>
-    </body>
+<!doctype html>
+<html class="no-js" lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Foundation for Sites</title>
+  <link rel="stylesheet" href="assets/css/foundation.css">
+  <link rel="stylesheet" href="assets/css/app.css">
+</head>
+
+<body>
+  <div class="title-bar">
+    <div class="title-bar-left">
+      <button class="menu-icon" type="button" data-open="offCanvasLeftOverlap"></button>
+      <span class="title-bar-title">Foundation title bar with top off-canvas</span>
+    </div>
+  </div>
+
+  <div class="off-canvas-wrapper">
+    <div class="off-canvas position-left" id="offCanvasLeftOverlap" data-off-canvas data-transition="overlap">
+      <!-- Your menu or Off-canvas content goes here -->
+      <!-- Close button -->
+      <button class="close-button" aria-label="Close menu" type="button" data-close>
+        <span aria-hidden="true">&times;</span>
+      </button>
+
+      <!-- Menu -->
+      <ul class="vertical menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Designs</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="off-canvas-content" data-off-canvas-content>
+
+    <!-- Your page content lives here -->
+    <div class="grid-container">
+      <div class="grid-x grid-padding-x">
+        <div class="large-12 cell">
+          <h1>Welcome to Blessing C. Productions</h1>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+
+
+
+  <script src="assets/js/vendor/jquery.js"></script>
+  <script src="assets/js/vendor/what-input.js"></script>
+  <script src="assets/js/vendor/foundation.js"></script>
+  <script src="assets/js/app.js"></script>
+</body>
+
 </html>
